# Antigravity-Server

./: .gitignore  .gitmodules  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Containerfile  Containerfile.runtime  Justfile  README.md  README.md.bak  README_EN.md  README_RU.md  deploy.sh  flake.nix  package-lock.json  package.json  result  tsconfig.json  vite.config.ts
antigravity-server/: Cargo.toml  build.rs
antigravity-server/src/: account_commands.rs  api.rs  cli.rs  commands.rs  config_commands.rs  config_sync.rs  main.rs  router.rs  scheduler.rs  server_utils.rs  state.rs  test_helpers.rs  warmup_commands.rs
antigravity-server/src/api/: account_proxy.rs  accounts.rs  config.rs  device.rs  mod.rs  monitor.rs  monitor_tests.rs  oauth.rs  proxy.rs  proxy_health.rs  proxy_health_tests.rs  proxy_tests.rs  quota.rs  resilience.rs  resilience_tests.rs
antigravity-server/src/api/quota/: mod.rs  refresh.rs  warmup.rs
antigravity-server/src/scheduler/: mod.rs  quota_refresh.rs  state.rs  warmup.rs
antigravity-server/src/state/: accessors.rs  config_sync.rs  mod.rs  proxy_sync.rs
antigravity-vps-cli/: Cargo.toml
antigravity-vps-cli/src/: main.rs  ssh_client.rs
crates/antigravity-client/: Cargo.toml  README.md
crates/antigravity-client/src/: client.rs  error.rs  lib.rs  messages.rs
crates/antigravity-core/: Cargo.toml
crates/antigravity-core/migrations/: 001_initial_schema.sql  002_fix_event_cascade.sql  003_thinking_signatures.sql  004_session_signatures.sql  005_requests_cached_tokens.sql  006_account_proxy_url.sql
crates/antigravity-core/src/: error.rs  lib.rs
crates/antigravity-core/src/models/: config.rs  mod.rs
crates/antigravity-core/src/modules/: account.rs  account_pg.rs  account_pg_crud.rs  account_pg_events.rs  account_pg_helpers.rs  account_pg_query.rs  account_pg_targeted.rs  config.rs  device.rs  device_tests.rs  json_migration.rs  logger.rs  migration.rs  mod.rs  oauth.rs  proxy_db.rs  proxy_pool.rs  quota.rs  repository.rs  signature_storage.rs  token_extraction.rs  token_usage_stats.rs  vscode.rs
crates/antigravity-core/src/modules/account/: async_wrappers.rs  crud.rs  current.rs  fetch.rs  index.rs  mod.rs  paths.rs  quota.rs  storage.rs  switch.rs  verification.rs
crates/antigravity-core/src/modules/process/: close.rs  detection.rs  info.rs  lifecycle_utils.rs  mod.rs  paths.rs  pid_collection.rs  start.rs
crates/antigravity-core/src/proxy/: active_request_guard.rs  adaptive_limit.rs  audio  config.rs  handlers  health.rs  mappers  middleware  mod.rs  monitor.rs  project_resolver.rs  prometheus.rs  providers  proxy_pool.rs  rate_limit.rs  routing_config.rs  security.rs  server.rs  session_manager.rs  signature_cache.rs  signature_cache_tests.rs  signature_metrics.rs  smart_prober.rs  sticky_config.rs  token_manager.rs  token_manager_upstream.rs  upstream  warp_isolation.rs  zai_vision_mcp.rs  zai_vision_tools.rs
crates/antigravity-core/src/proxy/adaptive_limit/: aimd.rs  manager.rs  mod.rs  stats.rs  tests.rs  tracker.rs
crates/antigravity-core/src/proxy/audio/: mod.rs
crates/antigravity-core/src/proxy/common/: circuit_breaker.rs  client_builder.rs  header_constants.rs  image_retention.rs  json_schema.rs  media_detect.rs  mod.rs  model_family.rs  model_mapping.rs  model_mapping_ext.rs  random_id.rs  sanitize_error.rs  schema_cache.rs  sse_parser.rs  thinking_config.rs  thinking_constants.rs  tool_adapter.rs  tos_ban.rs
crates/antigravity-core/src/proxy/handlers/: audio.rs  claude.rs  common.rs  detect_model.rs  gemini.rs  mcp.rs  mcp_forward.rs  mcp_vision.rs  mod.rs  openai.rs  retry_strategy.rs  retry_strategy_tests.rs  retry_tests.rs  warmup.rs
crates/antigravity-core/src/proxy/health/: mod.rs  monitor.rs  response.rs  tests.rs  types.rs
crates/antigravity-core/src/proxy/mappers/: common_utils.rs  common_utils_test_probe.rs  context_manager.rs  error_classifier.rs  estimation_calibrator.rs  mod.rs  signature_store.rs  tool_result_compressor.rs
crates/antigravity-core/src/proxy/middleware/: auth.rs  cors.rs  logging.rs  mod.rs  (+4 more)
crates/antigravity-core/src/utils/: http.rs  mod.rs  paths.rs  protobuf.rs  protobuf_test.rs
crates/antigravity-core/tests/: integration_proxy.rs
crates/antigravity-shared/: Cargo.toml
crates/antigravity-shared/src/: error.rs  lib.rs
crates/antigravity-shared/src/models/: mod.rs  stats.rs
crates/antigravity-shared/src/proxy/: config.rs
crates/antigravity-shared/src/utils/: http.rs
crates/antigravity-types/: Cargo.toml  README.md
crates/antigravity-types/src/: lib.rs
crates/antigravity-types/src/error/: account.rs  config.rs  mod.rs  proxy.rs
crates/antigravity-types/src/models/: account.rs  config.rs  device.rs  mod.rs  model_family.rs  quota.rs  stats.rs  sync.rs  token.rs
crates/antigravity-types/src/protocol/: claude.rs  gemini.rs  mod.rs  openai.rs
src-leptos/: Cargo.toml  Trunk.toml  build.rs  index.html
src-leptos/.cargo/: config.toml
src-leptos/src/: actions.rs  api.rs  api_models.rs  app.rs  formatters.rs  lib.rs  main.rs  tauri.rs  types.rs
src-leptos/src/api/: accounts.rs  config.rs  mod.rs  proxy.rs  system.rs
src-leptos/src/components/: account_card.rs  account_details_modal.rs  add_account_modal.rs  button.rs  collapsible_card.rs  mod.rs  modal.rs  pagination.rs  select.rs  sidebar.rs  stats_card.rs  tooltip.rs
src-leptos/src/components/add_account_modal/: mod.rs  parser.rs  tabs.rs
src-leptos/src/pages/: accounts.rs  dashboard.rs  login.rs  mod.rs  monitor.rs  proxy.rs  settings.rs
src-leptos/src/pages/accounts/: account_row.rs  actions.rs  content.rs  filter_types.rs  header.rs  mod.rs  modals.rs  toolbar.rs
src-leptos/src/pages/dashboard/: best_accounts.rs  current_account.rs  mod.rs  tiers.rs
src-leptos/src/pages/monitor/: formatters.rs  log_detail.rs  mod.rs
src-leptos/src/pages/proxy/: actions.rs  mod.rs  quick_start.rs  routing.rs  scheduling.rs  state.rs  test_mapping.rs  zai.rs
src-leptos/src/pages/settings/: about.rs  general.rs  mod.rs  proxy.rs  quota_protection.rs  quota_refresh.rs  warmup.rs
src-leptos/styles/: main.css
(+293 files in other folders)
