# Antigravity Manager - Workspace Root
# This workspace contains:
# - antigravity-core: Shared business logic (proxy, accounts, models)
# - src-leptos: Leptos-based WASM frontend for Tauri
# - src-tauri: Tauri backend

[workspace]
resolver = "2"
members = [
    "crates/antigravity-core",
    "crates/antigravity-shared",
    "src-leptos",
    "src-tauri",
    "antigravity-vps-cli",
    "antigravity-server",
]

[workspace.package]
version = "3.3.20"
edition = "2021"
license = "CC-BY-NC-SA-4.0"
authors = ["lbjlaq", "Stranmor"]

[workspace.dependencies]
antigravity-shared = { path = "crates/antigravity-shared" }
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
async-stream = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP
reqwest = { version = "0.12", features = ["json", "stream", "socks"] }
axum = { version = "0.7", features = ["multipart"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
tracing-appender = "0.2"
tracing-log = "0.2"

# Utilities
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = "0.4"
dirs = "5.0"
base64 = "0.22"
url = "2.5"
regex = "1.12"
once_cell = "1.19"
dashmap = "6.1"
rand = "0.8"
sha2 = "0.10"
bytes = "1.5"
pin-project = "1.1"
eventsource-stream = "0.2"

# Leptos UI (WASM)
leptos = { version = "0.7", features = ["csr"] }
leptos_router = "0.7"
leptos_meta = "0.7"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
