# Antigravity Manager - Workspace Root
# This workspace contains:
# - antigravity-core: Shared business logic (proxy, accounts, models)
# - src-leptos: Leptos-based WASM frontend for Tauri
# - src-tauri: Tauri backend

[workspace]
resolver = "2"
members = [
    "crates/antigravity-types",
    "crates/antigravity-core",
    "crates/antigravity-client",
    "src-leptos",
    # NOTE: src-tauri is excluded from workspace - it's a read-only upstream reference
    # Use ./scripts/sync-upstream.sh to sync proxy code to antigravity-core
    "antigravity-vps-cli",
    "antigravity-server",
]

[workspace.package]
version = "3.3.45"
edition = "2021"
license = "CC-BY-NC-SA-4.0"
authors = ["lbjlaq", "Stranmor"]

[workspace.dependencies]
antigravity-types = { path = "crates/antigravity-types" }
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
async-stream = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "socks", "rustls-tls"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
tracing-appender = "0.2"
tracing-log = "0.2"

# Utilities
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = "0.4"
dirs = "5.0"
base64 = "0.22"
url = "2.5"
regex = "1.12"
once_cell = "1.19"
dashmap = "6.1"
rand = "0.8"
sha2 = "0.10"
bytes = "1.5"
pin-project = "1.1"
eventsource-stream = "0.2"

# ============================================================================
# BUILD PROFILES - Optimized for fast iteration
# ============================================================================

# Dev profile: FAST compilation, slow runtime
[profile.dev]
opt-level = 0
debug = true
incremental = true
codegen-units = 256  # Maximum parallelism

# Dev dependencies: optimize for faster test runs
[profile.dev.package."*"]
opt-level = 2  # Dependencies optimized even in dev

# Release profile: balanced speed vs optimization
[profile.release]
opt-level = 3
lto = "thin"       # thin LTO: 80% benefit, 20% time (was: full LTO)
codegen-units = 16 # Parallel codegen (was: 1 = sequential)
strip = true
incremental = false

# Production profile: maximum optimization (use for final deploy)
[profile.production]
inherits = "release"
lto = "fat"        # Full LTO for final binary
codegen-units = 1  # Single codegen unit for best optimization
panic = "abort"    # Smaller binary, no unwinding
