[package]
name = "antigravity-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Headless Antigravity Manager daemon with HTTP API and WebUI"

[[bin]]
name = "antigravity-server"
path = "src/main.rs"

[dependencies]
# Core
antigravity-core = { path = "../crates/antigravity-core" }
antigravity-shared = { path = "../crates/antigravity-shared" }

# Web Framework
axum = { version = "0.7", features = ["macros", "multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }

# Async Runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error Handling
anyhow = "1"
thiserror = "2"

# CLI
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
comfy-table = "7"
colored = "3"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
rand.workspace = true

# Socket activation (systemd fd handoff)
listenfd = "1"

# Zero-downtime restarts (SO_REUSEPORT)
socket2 = { version = "0.5", features = ["all"] }
