[package]
name = "antigravity-vps-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
async-trait = "0.1"
russh = "0.56"
futures = "0.3"
thiserror = "1.0"
anyhow = "1.0"
config = "0.15"
serde = { version = "1.0", features = ["derive"] }
ssh-key = "0.6"
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
home = "0.5"
async-ssh2-lite = { version = "0.5.0", features = ["tokio"] }
