[package]
name = "antigravity-leptos"
version = "3.3.43"
edition = "2021"

[dependencies]
antigravity-types = { workspace = true }
# Leptos core
leptos = { version = "0.7", features = ["csr"] }
leptos_router = { version = "0.7" }
leptos_meta = { version = "0.7" }

# WASM bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window", 
    "Document", 
    "Navigator", 
    "Clipboard",
    "console",
    "HtmlInputElement",
    "Storage"
] }

# Serialization (for Tauri IPC)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"

# Async
futures = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }

# Logging
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1"

# Time
chrono = { version = "0.4", features = ["wasmbind"] }
uuid = { version = "1.10", features = ["v4", "serde", "js"] }

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "antigravity-leptos"
path = "src/main.rs"
