[package]
name = "antigravity-core"
description = "Core business logic for Antigravity Manager (accounts, proxy, models)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
antigravity-types = { workspace = true }
# Async
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# HTTP
reqwest = { workspace = true }
axum = { version = "0.7", features = ["multipart"] }
hyper = { workspace = true }
hyper-util = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
http = "1"
http-body-util = "0.1"

# Database
rusqlite = { workspace = true }
sqlx = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
tracing-log = { workspace = true }


# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
base64 = { workspace = true }
url = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
dashmap = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
bytes = { workspace = true }
pin-project = { workspace = true }
eventsource-stream = { workspace = true }

# Validation
validator = { version = "0.18", features = ["derive"] }

# System info (for process detection)
sysinfo = "0.31"

# Image processing (for icons, etc)
image = "0.25"

# AIMD Resilience System
metrics = "0.23"
metrics-exporter-prometheus = "0.15"
parking_lot = "0.12"

# Crypto (constant-time comparison)
subtle = "2"

[features]
default = ["custom_handlers"]
# Enable Tauri-specific integrations (tray, etc)
tauri-compat = []
# Enable custom handler modifications (account rotation, etc)
custom_handlers = []

[dev-dependencies]
wiremock = "0.6"
axum-test = "16"
tokio-test = "0.4"
tempfile = "3"
