[package]
name = "antigravity-core"
description = "Core business logic for Antigravity Manager (accounts, proxy, models)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
antigravity-types = { workspace = true }
# Async
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
async-stream = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# HTTP
reqwest = { workspace = true }
axum = { version = "0.7", features = ["multipart"] }
tower-http = { workspace = true }

# Database
rusqlite = { workspace = true }
sqlx = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
base64 = { workspace = true }
url = { workspace = true }
regex = { workspace = true }
dashmap = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
bytes = { workspace = true }
percent-encoding = "2"

# System info (for process detection)
sysinfo = "0.31"

# AIMD Resilience System
metrics = "0.23"
metrics-exporter-prometheus = "0.15"
parking_lot = "0.12"

# Crypto (constant-time comparison)
subtle = "2"

[features]
default = ["custom_handlers"]
# Enable Tauri-specific integrations (tray, etc)
tauri-compat = []
# Enable custom handler modifications (account rotation, etc)
custom_handlers = []

[dev-dependencies]
axum-test = "16"
tempfile = "3"
wiremock = "0.6"

# LINT OVERRIDE: Proxy crate performs protocol transformation with bounded arithmetic.
# Token counts, timestamps, and byte buffers are all bounded by API/protocol limits.
# Precision loss in f64 is acceptable for rate limiting and token estimation heuristics.
# See AGENTS.md section 2.0.2 for override policy.
[lints.clippy]
arithmetic_side_effects = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
as_conversions = "allow"
indexing_slicing = "allow"
integer_division = "allow"
modulo_arithmetic = "allow"
